--- a/src/app/shared/header/header.html
+++ b/src/app/shared/header/header.html
@@ -98,5 +98,7 @@
     <hr class="mobile-nav-divider">
     <a href="/login" class="mobile-nav-link">Connexion</a>
     <a href="/register" class="mobile-nav-link">S'inscrire</a>
+    <a (click)="logout()" class="mobile-nav-link">logout</a>
+
   </div>
 </header>
