--- a/src/app/shared/components/pagination/pagination.html
+++ b/src/app/shared/components/pagination/pagination.html
@@ -1,1 +1,24 @@
-<p>pagination works!</p>
+<!-- Pagination -->
+<div class="pagination">
+<button class="btn btn-outline btn-sm" disabled>
+    <svg width="18" height="18" viewBox="0 0 20 20" fill="currentColor">
+    <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd"/>
+    </svg>
+    Précédent
+</button>
+
+<div class="pagination-numbers">
+    <button class="pagination-btn active">1</button>
+    <button class="pagination-btn">2</button>
+    <button class="pagination-btn">3</button>
+    <span class="pagination-dots">...</span>
+    <button class="pagination-btn">13</button>
+</div>
+
+<button class="btn btn-outline btn-sm">
+    Suivant
+    <svg width="18" height="18" viewBox="0 0 20 20" fill="currentColor">
+    <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"/>
+    </svg>
+</button>
+</div>
