adding application card

--- a/src/app/features/jobs/pages/landing/landing.html
+++ b/src/app/features/jobs/pages/landing/landing.html
@@ -57,7 +57,9 @@
 
         <app-job-card
             *ngFor="let job of jobs"
-            [job]="job">
+            [job]="job"
+            [alreadyApplied]="appliedOffersId.has(job.id)"
+            (apply)="onApplyJob($event)">
         </app-job-card>
 
         </div>
