--- a/src/app/shared/components/job-card/job-card.html
+++ b/src/app/shared/components/job-card/job-card.html
@@ -94,13 +94,17 @@
         <!-- Apply Button -->
         <button   
           *ngIf="authservice.isAuthenticated()"
-          class="btn btn-apply">
+          class="btn btn-apply"
+          (click)="onApply()">
           <svg width="18" height="18" viewBox="0 0 20 20" fill="currentColor">
             <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"/>
             <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"/>
           </svg>
           Postuler
         </button>
+        <span *ngIf="alreadyApplied" class="badge">
+            Déjà postulé
+        </span>
 
         <!-- View Offer Button -->
         <a
